# YiAgent

./: .gitignore  MEMORY.md  app.py  conclusion.md  pyproject.toml  pytest.ini  requirements.txt  resume-project.md
memory/: async-test-patterns.md  deepseek-api-config.md  haitao-dev-preferences.md  pgvector-config.md  redis-connection-pool.md  yiagent-architecture.md
memory/users/test_user/: 2026-06-26.md
tests/: conftest.py  test_app.py  test_app_chat.py  test_chunker.py  test_config.py  test_context_flush.py  test_conversation_store.py  test_dry_run.py  test_embedding.py  test_evolution.py  test_evolution_trigger.py  test_file_watcher.py  test_log.py  test_long_term_store_helpers.py  test_memory_tools.py  test_model_router.py  test_new_bugs.py  test_protocol_models.py  test_redis_pool.py  test_singleton.py  test_skills.py  test_tool_manager.py  test_utils.py
yiagent/: __init__.py
yiagent/agent/: runtime.py
yiagent/agent/evolution/: __init__.py  backup.py  config.py  executor.py  prompts.py  record.py  trigger.py
yiagent/agent/prompt/: __init__.py  builder.py
yiagent/agent/skills/: config.py  formatter.py  loader.py  manager.py  types.py
yiagent/agent/tools/: base_tool.py  dry_run.py  tool_manager.py
yiagent/channel/: __init__.py  base.py
yiagent/common/: config.py  log.py  redis_pool.py  singleton.py  utils.py
yiagent/memory/: chunker.py  config.py  context_flush.py  conversation_store.py  file_watcher.py  long_term_store.py  manager.py
yiagent/model_gateway/: router.py
yiagent/protocol/: __init__.py  models.py
(+13 files in other folders)
