[project]
name = "yiagent"
version = "0.1.0"
description = "Enterprise-Grade AI Agent with Redis + PostgreSQL/pgvector memory"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
]
